fixing modal issue on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -497,7 +497,7 @@ body.section-0 #map { opacity:0.5; }
     }
     .formWrapper{
         overflow: scroll;
-        height: 600px;
+        max-height: 480px ;
     }
 
     #modal-trigger{
